--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -464,7 +464,7 @@ cont.querySelectorAll(".result-item").forEach(el => {
     }
   };
 });
-
+}); // ← ESTE CIERRE FALTABA
 
 // ==== Buscar directo con Enter ====
 $("#buscador").addEventListener("keydown", e => {
