--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -142,7 +142,7 @@
 <!-- 📦 POS -->
 <div id="posApp" style="display:none;">
 <header>
-  <span>POS – Ruta de Venta</span>
+  <span>POS – Ruta de Venta/DESCUENTO</span>
   <img src="logo_proveedora.webp" alt="Logo">
   <button id="btnLogout" style="position:absolute;right:10px;top:10px;background:#c0392b;color:white;border:none;padding:6px 10px;border-radius:8px;font-size:14px;font-weight:600;cursor:pointer;">🚪 Salir</button>
 </header>
