--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -608,14 +608,17 @@ function imprimirTicketEstilado(){
     return;
   }
 
-  // Si usa la app RAWBT para Android (permite imprimir HTML completo)
-  if(/Android/i.test(navigator.userAgent)){
-    const html = `<html><body>${t.innerHTML}</body></html>`;
-    const encoded = encodeURIComponent(html);
-    window.location.href = `rawbt:print?html=${encoded}`;
-    return;
-  }
-
+if (/Android/i.test(navigator.userAgent)) {
+  const html = `<html><head><meta charset="utf-8"></head><body>${t.innerHTML}</body></html>`;
+  const blob = new Blob([html], { type: "text/html" });
+  const reader = new FileReader();
+  reader.onload = () => {
+    const base64 = reader.result.split(",")[1];
+    window.location.href = `rawbt:base64,${base64}`;
+  };
+  reader.readAsDataURL(blob);
+  return;
+}
   // Si es navegador normal
   window.print();
 }
