--- a/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
+++ b/POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html
@@ -599,31 +599,50 @@ function rellenarTicket(v){
   });
 }
 
-function imprimirTicketEstilado(){
+function imprimirTicketEstilado() {
   const t = document.getElementById("ticketArea");
 
-  // Si el POS usa InnerPrinter (por ejemplo TechZone POS)
-if(window.InnerPrinter && typeof window.InnerPrinter.printText === "function"){
-  const texto = t.innerText;
-  window.InnerPrinter.printText(texto);
-  return;
-}
+  // 🔸 1. Si el POS usa InnerPrinter (TechZone, Sunmi, etc.)
+  if (window.InnerPrinter) {
+    try {
+      if (typeof window.InnerPrinter.printText === "function") {
+        const texto = t.innerText.replace(/\n\s*\n/g, "\n");
+        window.InnerPrinter.printText(texto);
+        return;
+      }
+      if (typeof window.InnerPrinter.printHtml === "function") {
+        // algunos POS solo interpretan HTML básico
+        const html = `<html><head><meta charset='utf-8'></head><body>${t.innerHTML}</body></html>`;
+        window.InnerPrinter.printHtml(html);
+        return;
+      }
+    } catch (e) {
+      console.error("Error InnerPrinter:", e);
+    }
+  }
 
+  // 🔸 2. Si usa la app RawBT (Android)
+  if (/Android/i.test(navigator.userAgent)) {
+    try {
+      const textoPlano = t.innerText.replace(/\n\s*\n/g, "\n");
+      const blob = new Blob([textoPlano], { type: "text/plain" });
+      const reader = new FileReader();
+      reader.onload = () => {
+        const base64 = reader.result.split(",")[1];
+        // ⚠️ Usa rawbt:text y no rawbt:base64, para modo texto
+        window.location.href = `rawbt:text,${base64}`;
+      };
+      reader.readAsDataURL(blob);
+      return;
+    } catch (e) {
+      console.error("Error RawBT:", e);
+    }
+  }
 
-if (/Android/i.test(navigator.userAgent)) {
-  const html = `<html><head><meta charset="utf-8"></head><body>${t.innerHTML}</body></html>`;
-  const blob = new Blob([html], { type: "text/html" });
-  const reader = new FileReader();
-  reader.onload = () => {
-    const base64 = reader.result.split(",")[1];
-    window.location.href = `rawbt:base64,${base64}`;
-  };
-  reader.readAsDataURL(blob);
-  return;
-}
-  // Si es navegador normal
+  // 🔸 3. Si es navegador normal (PC o laptop)
   window.print();
 }
+
 
 // ==== Cliente público ====
 async function fijarClientePublico(){
