--- a/BOTSINVTEL/panel_fijacion_control.html
+++ b/BOTSINVTEL/panel_fijacion_control.html
@@ -5,141 +5,184 @@
   <title>Panel de Control – Fijación de Artículos | PROVSOFT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Firebase -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, query, where, orderBy, getDocs, setDoc, doc } 
-      from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+<script type="module">
+  import { 
+    initializeApp 
+  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { 
+    getFirestore, collection, query, where, orderBy, getDocs, getDoc, setDoc, doc 
+  } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    // 🔧 Tu configuración Firebase real
-    const firebaseConfig = {
-      apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
-      authDomain: "inventariopv-643f1.firebaseapp.com",
-      projectId: "inventariopv-643f1",
-      storageBucket: "inventariopv-643f1.firebasestorage.app",
-      messagingSenderId: "96242533231",
-      appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
-    };
+  // 🔧 Configuración Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+    authDomain: "inventariopv-643f1.firebaseapp.com",
+    projectId: "inventariopv-643f1",
+    storageBucket: "inventariopv-643f1.firebasestorage.app",
+    messagingSenderId: "96242533231",
+    appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
+  };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-    // Elementos del DOM
-    const busqueda = document.getElementById('busqueda');
-    const resultados = document.getElementById('resultados');
-    const codigo = document.getElementById('codigo');
-    const concepto = document.getElementById('concepto');
-    const inventario_fijado = document.getElementById('inventario_fijado');
-    const inventario_minimo = document.getElementById('inventario_minimo');
-    const usuario = document.getElementById('usuario');
-    const msg = document.getElementById('msg');
-    const tbody = document.getElementById('tbody');
+  // ===== ELEMENTOS DOM =====
+  const busqueda = document.getElementById('busqueda');
+  const resultados = document.getElementById('resultados');
+  const codigo = document.getElementById('codigo');
+  const concepto = document.getElementById('concepto');
+  const inventario_fijado = document.getElementById('inventario_fijado');
+  const inventario_minimo = document.getElementById('inventario_minimo');
+  const usuario = document.getElementById('usuario');
+  const msg = document.getElementById('msg');
+  const tbody = document.getElementById('tbody');
 
-    // 🔍 Búsqueda en vivo de productos activos
-    busqueda.addEventListener('input', async () => {
-      const texto = busqueda.value.trim().toLowerCase();
-      if (texto.length < 2) { resultados.style.display = 'none'; return; }
+  // ===== BUSCAR PRODUCTO =====
+  busqueda.addEventListener('input', async () => {
+    const texto = busqueda.value.trim().toLowerCase();
+    if (texto.length < 2) { resultados.style.display = 'none'; return; }
 
-      const productosRef = collection(db, "productos");
-      const q = query(productosRef, where("activo", "==", true));
-      const snap = await getDocs(q);
+    const productosRef = collection(db, "productos");
+    const q = query(productosRef, where("activo", "==", true));
+    const snap = await getDocs(q);
 
-      resultados.innerHTML = '';
-      let encontrados = 0;
+    resultados.innerHTML = '';
+    let encontrados = 0;
 
-      snap.forEach(docSnap => {
-        const data = docSnap.data();
-        const codigoStr = String(data.codigoBarra || '').toLowerCase();
-const conceptoStr = String(data.concepto || '').toLowerCase();
-const coincide = codigoStr.includes(texto) || conceptoStr.includes(texto);
+    snap.forEach(docSnap => {
+      const data = docSnap.data();
+      const codigoStr = String(data.codigoBarra || '').toLowerCase();
+      const conceptoStr = String(data.concepto || '').toLowerCase();
+      const coincide = codigoStr.includes(texto) || conceptoStr.includes(texto);
 
-        if (coincide) {
-          encontrados++;
-          const div = document.createElement('div');
-          div.textContent = `${data.codigoBarra} – ${data.concepto}`;
-          div.onclick = () => {
-            codigo.value = data.codigoBarra;
-            concepto.value = data.concepto;
-            busqueda.value = '';
-            resultados.style.display = 'none';
-            msg.innerText = "✅ Artículo seleccionado";
-          };
-          resultados.appendChild(div);
-        }
-      });
-
-      resultados.style.display = encontrados > 0 ? 'block' : 'none';
-    });
-
-    // 💾 Guardar / Actualizar y registrar historial
-    window.guardarArticulo = async function guardarArticulo() {
-      const codigoVal = codigo.value.trim();
-      const conceptoVal = concepto.value.trim();
-      const fijadoVal = parseInt(inventario_fijado.value || 0);
-      const minimoVal = parseInt(inventario_minimo.value || 0);
-      const usuarioVal = usuario.value.trim() || "Desconocido";
-      const ahora = new Date().toISOString();
-
-      if (!codigoVal || !fijadoVal) return alert("Completa código y cantidad fijada");
-
-      const docRef = doc(db, "seguimiento_inventario", codigoVal);
-
-      await setDoc(docRef, {
-        codigoBarra: codigoVal,
-        concepto: conceptoVal,
-        inventario_fijado: fijadoVal,
-        inventario_minimo: minimoVal,
-        activo: true,
-        fecha_inicio: ahora,
-        actualizadoEn: ahora
-      });
-
-      const histRef = doc(db, `seguimiento_inventario/${codigoVal}/historial`, ahora);
-      await setDoc(histRef, {
-        inventario_fijado: fijadoVal,
-        inventario_minimo: minimoVal,
-        usuario: usuarioVal,
-        fecha: ahora
-      });
-
-      msg.innerText = "✅ Artículo fijado / actualizado correctamente";
-      inventario_fijado.value = '';
-      inventario_minimo.value = '';
-      codigo.value = '';
-      concepto.value = '';
-      cargarTabla();
-    };
-
-    // 📋 Cargar tabla de artículos fijados activos
-    async function cargarTabla() {
-      const segRef = collection(db, "seguimiento_inventario");
-      const q = query(segRef, where("activo", "==", true), orderBy("codigoBarra"));
-      const snap = await getDocs(q);
-
-      tbody.innerHTML = "";
-      snap.forEach(docSnap => {
-        const data = docSnap.data();
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${data.codigoBarra}</td>
-          <td>${data.concepto || "-"}</td>
-          <td>${data.inventario_fijado}</td>
-          <td>${data.inventario_minimo}</td>
-          <td>${data.actualizadoEn ? data.actualizadoEn.split("T")[0] : "-"}</td>
-        `;
-        tr.onclick = () => {
+      if (coincide) {
+        encontrados++;
+        const div = document.createElement('div');
+        div.textContent = `${data.codigoBarra} – ${data.concepto}`;
+        div.onclick = async () => {
           codigo.value = data.codigoBarra;
           concepto.value = data.concepto;
-          inventario_fijado.value = data.inventario_fijado;
-          inventario_minimo.value = data.inventario_minimo;
-          msg.innerText = "📝 Editando artículo " + data.codigoBarra;
-          window.scrollTo({ top: 0, behavior: 'smooth' });
+          busqueda.value = '';
+          resultados.style.display = 'none';
+
+          // Verificar si ya está fijado
+          const segRef = doc(db, "seguimiento_inventario", data.codigoBarra);
+          const segSnap = await getDoc(segRef);
+          if (segSnap.exists()) {
+            const s = segSnap.data();
+            inventario_fijado.value = s.inventario_fijado;
+            inventario_minimo.value = s.inventario_minimo;
+            msg.innerHTML = `🧭 Artículo ya fijado<br>
+              <small>Anterior: ${s.inventario_fijado} | Mínimo: ${s.inventario_minimo}</small>`;
+          } else {
+            msg.innerText = "✅ Nuevo artículo listo para fijar";
+          }
         };
-        tbody.appendChild(tr);
-      });
+        resultados.appendChild(div);
+      }
+    });
+
+    resultados.style.display = encontrados > 0 ? 'block' : 'none';
+  });
+
+  // ===== GUARDAR / ACTUALIZAR =====
+  window.guardarArticulo = async function guardarArticulo() {
+    const codigoVal = codigo.value.trim();
+    const conceptoVal = concepto.value.trim();
+    const fijadoVal = parseInt(inventario_fijado.value || 0);
+    const minimoVal = parseInt(inventario_minimo.value || 0);
+    const usuarioVal = usuario.value.trim() || "Desconocido";
+    const ahora = new Date().toISOString();
+
+    if (!codigoVal || isNaN(fijadoVal)) return alert("Completa código y cantidad fijada");
+
+    const segRef = doc(db, "seguimiento_inventario", codigoVal);
+    const segSnap = await getDoc(segRef);
+
+    let motivo = "fijación inicial";
+    let diferencia = 0;
+    let inventarioAnterior = 0;
+
+    if (segSnap.exists()) {
+      const dataPrev = segSnap.data();
+      inventarioAnterior = parseInt(dataPrev.inventario_fijado || 0);
+      diferencia = fijadoVal - inventarioAnterior;
+      motivo = diferencia > 0 ? "reabastecimiento" : (diferencia < 0 ? "ajuste manual" : "sin cambio");
     }
 
-    cargarTabla();
-  </script>
+    // Guardar el documento actualizado
+    await setDoc(segRef, {
+      codigoBarra: codigoVal,
+      concepto: conceptoVal,
+      inventario_fijado: fijadoVal,
+      inventario_minimo: minimoVal,
+      activo: true,
+      fecha_inicio: segSnap.exists() ? segSnap.data().fecha_inicio : ahora,
+      actualizadoEn: ahora
+    });
+
+    // Registrar en historial
+    const histRef = doc(db, `seguimiento_inventario/${codigoVal}/historial`, ahora);
+    await setDoc(histRef, {
+      inventario_anterior: inventarioAnterior,
+      inventario_nuevo: fijadoVal,
+      diferencia: diferencia,
+      motivo: motivo,
+      usuario: usuarioVal,
+      fecha: ahora
+    });
+
+    // Mensaje visual según tipo de cambio
+    if (diferencia > 0) {
+      msg.innerHTML = `✅ +${diferencia} reabastecimiento<br><small>Nuevo total: ${fijadoVal}</small>`;
+      msg.style.color = "limegreen";
+    } else if (diferencia < 0) {
+      msg.innerHTML = `⚠️ ${diferencia} ajuste manual<br><small>Nuevo total: ${fijadoVal}</small>`;
+      msg.style.color = "orange";
+    } else {
+      msg.innerHTML = "ℹ️ Sin cambio en el valor fijado";
+      msg.style.color = "gray";
+    }
+
+    inventario_fijado.value = '';
+    inventario_minimo.value = '';
+    codigo.value = '';
+    concepto.value = '';
+    await cargarTabla();
+  };
+
+  // ===== CARGAR TABLA =====
+  async function cargarTabla() {
+    const segRef = collection(db, "seguimiento_inventario");
+    const q = query(segRef, where("activo", "==", true), orderBy("codigoBarra"));
+    const snap = await getDocs(q);
+
+    tbody.innerHTML = "";
+    snap.forEach(docSnap => {
+      const data = docSnap.data();
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${data.codigoBarra}</td>
+        <td>${data.concepto || "-"}</td>
+        <td>${data.inventario_fijado}</td>
+        <td>${data.inventario_minimo}</td>
+        <td>${data.actualizadoEn ? data.actualizadoEn.split("T")[0] : "-"}</td>
+      `;
+      tr.onclick = () => {
+        codigo.value = data.codigoBarra;
+        concepto.value = data.concepto;
+        inventario_fijado.value = data.inventario_fijado;
+        inventario_minimo.value = data.inventario_minimo;
+        msg.innerText = "📝 Editando artículo " + data.codigoBarra;
+        msg.style.color = "white";
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      };
+      tbody.appendChild(tr);
+    });
+  }
+
+  cargarTabla();
+</script>
 
   <style>
     body {
